Novo cenario e melhorias

--- a/resources/fixtures/tasks.json
+++ b/resources/fixtures/tasks.json
@@ -7,7 +7,18 @@
         },
         "task": {
             "name": "Criar uma nova versão do Ipod",
-            "tasks": ["ios", "music", "ipod"]
+            "tags": ["ios", "music", "ipod"]
+        }
+    },
+    "duplicate": {
+        "user": {
+            "name": "Amanda Waller",
+            "email": "waller@chequemate.com",
+            "password": "pwd123"
+        },
+        "task": {
+            "name": "Recrutar novos meta humanos",
+            "tags": []
         }
     }
 }
