Novos cenarios e otimizacao de projeto

--- a/resources/fixtures/tasks.json
+++ b/resources/fixtures/tasks.json
@@ -20,5 +20,38 @@
             "name": "Recrutar novos meta humanos",
             "tags": []
         }
+    },
+    "tags_limit": {
+        "user": {
+            "name": "Carlos Villagran",
+            "email": "kiko@televisa.com",
+            "password": "pwd123"
+        },
+        "task": {
+            "name": "Estudar Python",
+            "tags": ["qax", "python", "programação", "pip"]
+        }
+    },
+    "done": {
+        "user": {
+            "name": "Tony Stark",
+            "email": "tony@stark.com",
+            "password": "pwd123"
+        },
+        "task": {
+            "name": "Criar uma nova IA",
+            "tags": ["jarvis", "ultron", "ark"]
+        }
+    },
+    "delete": {
+        "user": {
+            "name": "Hank Pym",
+            "email": "hank@pymtech.com",
+            "password": "pwd123"
+        },
+        "task": {
+            "name": "Criar a IA do Ultron",
+            "tags": ["ultron", "ia"]
+        }
     }
 }
